# llvm-project

.github/workflows/: libcxx-build-and-test.yaml  release-binaries.yml  release-sources.yml  release-tasks.yml
bolt/: CMakeLists.txt
bolt/lib/Core/: BinaryContext.cpp  BinaryFunction.cpp  ParallelUtilities.cpp
bolt/lib/Profile/: DataAggregator.cpp
bolt/lib/Rewrite/: DWARFRewriter.cpp  RewriteInstance.cpp
bolt/lib/RuntimeLibs/: RuntimeLibrary.cpp
clang/: CMakeLists.txt
clang-tools-extra/clangd/: ClangdServer.cpp  GlobalCompilationDatabase.cpp  TidyProvider.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang/docs/: ClangFormatStyleOptions.rst  LanguageExtensions.rst  ReleaseNotes.rst  UsersManual.rst
clang/include/: module.modulemap
clang/test/: CMakeLists.txt
clang/utils/: update-verify-tests.py
clang/www/: c_status.html  cxx_dr_status.html
cmake/Modules/: CMakePolicy.cmake
compiler-rt/: CMakeLists.txt
compiler-rt/cmake/: config-ix.cmake
compiler-rt/test/builtins/Unit/cpu_model/: CMakeLists.txt  CPUIDOverride.cpp  CPUIDOverride.h  cpuid.cpp  cpuid.h  x86.cpp
cross-project-tests/: lit.cfg.py
flang/: CMakeLists.txt
libc/: CMakeLists.txt
libc/hdr/: CMakeLists.txt
libc/include/: CMakeLists.txt
libc/newhdrgen/: yaml_to_classes.py
libc/spec/: linux.td  posix.td  stdc.td
libclc/: CMakeLists.txt
libcxx/: CMakeLists.txt
libcxx/benchmarks/: CMakeLists.txt
libcxx/docs/: BuildingLibcxx.rst  FeatureTestMacroTable.rst  TestingLibcxx.rst  index.rst
libcxx/include/: CMakeLists.txt  __config  __std_clang_module  __verbose_abort  deque  forward_list  functional  future  list  module.modulemap  optional  print  queue  ranges  regex  stack  string  string_view  tuple  variant  vector  version
libcxx/modules/: std.compat.cppm.in  std.cppm.in
libcxx/src/: CMakeLists.txt  atomic.cpp  charconv.cpp
libcxx/test/: CMakeLists.txt
libcxx/utils/: generate_feature_test_macro_components.py  generate_iwyu_mapping.py
libcxxabi/src/: CMakeLists.txt
libunwind/src/: UnwindCursor.hpp  UnwindLevel1.c  UnwindRegistersRestore.S
lld/COFF/: Driver.cpp
lld/ELF/: Config.h  Driver.cpp  InputFiles.cpp  InputFiles.h  InputSection.cpp  InputSection.h  LinkerScript.cpp  Options.td  OutputSections.h  Relocations.cpp  ScriptParser.cpp  SyntheticSections.cpp  Writer.cpp
lld/docs/: ReleaseNotes.rst
lld/wasm/: Driver.cpp
lldb/test/: CMakeLists.txt
lldb/unittests/: CMakeLists.txt
llvm/: CMakeLists.txt
llvm/cmake/: config-ix.cmake
llvm/docs/: AMDGPUUsage.rst  GettingStarted.rst  GitHub.rst  LangRef.rst  NVPTXUsage.rst  PointerAuth.md  ReleaseNotes.rst
llvm/runtimes/: CMakeLists.txt
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
offload/src/: interface.cpp  omptarget.cpp
openmp/runtime/: CMakeLists.txt  README.txt
(+2181 files in other folders)
